  as before to the non-unique numeric jobid; and ujobid refers
  to the unique job identification that Bacula creates for each
  job.  
- The job report for Backups has a few more user friendly ways
  of displaying the information.
- The wait command can now be made to wait for jobids.
- New command line keywords are permitted in update volume. They
  are Inchanger=yes/no, slot=nn.      
 
Major bug fixes:
- Fix race condition in multiple-drive autochangers where
  both drives want the same Volume.
- Do not allow opening default catalog for restricted console
  if it is not in ACL.
- Writable FIFOs now work for restore.
- ACLs are now checked in all dot commands.
- Multiple drive autochangers and multiple different autochangers
  should now work correctly (no race conditions for Volume names, 
  update slots use correct StorageId).
- Fix bug where drive was always reserved if a restore job failed
  while in the reservation process.
   

Minor bug fixes:
- See below:

Release 1.38.6 beta6 16Mar06
- Fix bug #537 to allow arbitrary time to mount a volume for
  restore, if polling is turned on.     
- Disallow multiple storage specifications for a job. Should fix Arno's
  problem.
- Add back a missing store of poolid in jr.poolid.    
- If dir_user or dir-group is specified in ./configure apply it to
  the working-dir. Fixes bug #533.
- If rescheduling a job cancel the previous incarnation with the SD.
  Fixes bugs #566 and 557.
- Fix bug #567 do_message() definition type conflict.

Release 1.38.6 beta5 14Mar06
- Add more jcr methods and make mutex and use_count private.
- Create lock/unlock methods for jcr.
- Fix PostgreSQL bug doing sql_data_seeek() by explicitly reading
  records to get to seek position.
- Integrate patch from bug #561 to correct conio.c signal definitions.
- Fix Rescheduling failed Jobs. Ensure that SD message thread 
  terminates correctly by doing pthread_kill(). Do not destroy
  SD cond wait variable between executions of the job. Use local